--- a/ChatClient/ChatClient.csproj
+++ b/ChatClient/ChatClient.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\Common\Message.cs" Link="Message.cs" />
+    <Compile Include="..\Message.cs" Link="Message.cs" />
   </ItemGroup>
 
 </Project>
